[package]
name = "wt-regression"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.1", default-features = false }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main", default-features = false, features = ["wat", "cranelift", "runtime"] }
anyhow = "1"

[[bench]]
name = "wasmtime_benchmark"
harness = false
