[package]
name = "wt-regression"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.3.0", default-features = false }
#wasmtime = "0.37.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "515fa4de012591e4edbc2548870ad377d0b5f3bc", default-features = false, features = ['cranelift', 'runtime'] }
anyhow = "1"

[[bench]]
name = "wasmtime_benchmark"
harness = false
